--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
     
-   <div style="border: 1px solid blue; min-height: 100px; margin: 20px auto;" id="ContainDiv">
-
+   <div style="border: 1px solid blue; min-height: 100px; margin: 1px auto;" id="ContainDiv">
         <div id="monitor">
         </div>
         <div>
@@ -26,7 +25,7 @@
             <div onclick="addCharToMonitor('pi')" class="mydiv" style="float: left;">pi</div>
             <div onclick="addCharToMonitor('e')" class="mydiv" style="float: left;">e</div>
             <div onclick="clearMonitor()" class="mydiv" style="float: left;">C</div>
-            <div onclick="delete_Last_char()" class="mydiv" style="float: left;">x</div>
+            <div onclick="delete_Last_char()" class="mydiv" style="float: left;">del</div>
             <div style="clear: both;"></div>
         </div>
         <div>
