change backgroundColor commit

--- a/index.html
+++ b/index.html
@@ -46,33 +46,33 @@
         </div>
         <div>
             <div onclick="addCharToMonitor('^')" class="mydiv" style="float: left;">x<sup>y</sup></div>
-            <div onclick="addCharToMonitor('7')" class="mydiv" style="float: left;">7</div>
-            <div onclick="addCharToMonitor('8')" class="mydiv" style="float: left;">8</div>
-            <div onclick="addCharToMonitor('9')" class="mydiv" style="float: left;">9</div>
+            <div onclick="addCharToMonitor('7')" class="mydiv numdiv" style="float: left;">7</div>
+            <div onclick="addCharToMonitor('8')" class="mydiv numdiv" style="float: left;">8</div>
+            <div onclick="addCharToMonitor('9')" class="mydiv numdiv" style="float: left;">9</div>
             <div onclick="addCharToMonitor('*')" class="mydiv" style="float: left;">*</div>
             <div style="clear: both;"></div>
         </div>
         <div>
             <div onclick="addCharToMonitor('10^')" class="mydiv" style="float: left;">10<sup>x</sup></div>
-            <div onclick="addCharToMonitor('4')" class="mydiv" style="float: left;">4</div>
-            <div onclick="addCharToMonitor('5')" class="mydiv" style="float: left;">5</div>
-            <div onclick="addCharToMonitor('6')" class="mydiv" style="float: left;">6</div>
+            <div onclick="addCharToMonitor('4')" class="mydiv numdiv" style="float: left;">4</div>
+            <div onclick="addCharToMonitor('5')" class="mydiv numdiv" style="float: left;">5</div>
+            <div onclick="addCharToMonitor('6')" class="mydiv numdiv" style="float: left;">6</div>
             <div onclick="addCharToMonitor('-')" class="mydiv" style="float: left;">-</div>
             <div style="clear: both;"></div>
         </div>
         <div>
             <div onclick="addCharToMonitor('log(')" class="mydiv" style="float: left;">log</div>
-            <div onclick="addCharToMonitor('1')" class="mydiv" style="float: left;">1</div>
-            <div onclick="addCharToMonitor('2')" class="mydiv" style="float: left;">2</div>
-            <div onclick="addCharToMonitor('3')" class="mydiv" style="float: left;">3</div>
+            <div onclick="addCharToMonitor('1')" class="mydiv numdiv" style="float: left;">1</div>
+            <div onclick="addCharToMonitor('2')" class="mydiv numdiv" style="float: left;">2</div>
+            <div onclick="addCharToMonitor('3')" class="mydiv numdiv" style="float: left;">3</div>
             <div onclick="addCharToMonitor('+')" class="mydiv" style="float: left;">+</div>
             <div style="clear: both;"></div>
         </div>
         <div>
             <div onclick="addCharToMonitor('ln(')" class="mydiv" style="float: left;">ln</div>
-            <div onclick="addCharToMonitor('-')" class="mydiv" style="float: left;">+/-</div>
-            <div onclick="addCharToMonitor('0')" class="mydiv" style="float: left;">0</div>
-            <div onclick="addCharToMonitor('.')" class="mydiv" style="float: left;">.</div>
+            <div onclick="addCharToMonitor('-')" class="mydiv numdiv" style="float: left;">+/-</div>
+            <div onclick="addCharToMonitor('0')" class="mydiv numdiv" style="float: left;">0</div>
+            <div onclick="addCharToMonitor('.')" class="mydiv numdiv" style="float: left;">.</div>
             <button onclick="calculateResult()" class="but1" style="float: left;">=</button>
             <div style="clear: both;"></div>
         </div>
